# GPT-C

./: .gitignore  README.md  convo_dump.txt  pyproject.toml  setup.py
src/gptc/: config.toml  convo_dump.txt  json_sample.json  main.py  md_gui.py  photo_ratio_calculator.py  simple_converter.py
