[tool.poetry]
name = "gpt-c"
version = "0.1.0"
description = "A tool for converting the official ChatBOT conversation json archive into Markdown."
authors = ["Kieran Bicheno <thelustriva@gmail.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
